@@ -1,3 +1,9 @@
+2004-02-24  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b52
+
+	* Further fix for bug #881690.  We weren't detecting the album name
+	  correctly, and weren't saving the album name field properly after
+	  migrating the album name.
+
 2004-02-23  Chris Schwerdt <muti@afterglo.ws> 1.4.3-cvs-b51
 
 	* Fixed Bug #902918: If magic quotes is enabled, gallery remote
